--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ textarea:focus {
 }
 
     .form-login,
+	.form-signup,
     .form-tambah {
         background: #FFFFFF;
         margin-top: 150px;
@@ -92,10 +93,19 @@ textarea:focus {
         box-shadow: 0 0 0;
         border: 1px solid #CFCFCF;
     }
+	.form-signup {
+		margin-top: 50px;
+		margin-bottom: 50px;
+	}
         .form-title,
         .form-login label,
         .form-login input,
         .form-login button,
+		.form-signup label,
+        .form-signup input,
+        .form-signup select,
+		.form-signup textarea,
+		.form-signup button,
         .form-tambah label,
         .form-tambah input,
         .form-tambah select,
@@ -105,7 +115,8 @@ textarea:focus {
             float: left;
             margin-bottom: 10px;
         }
-        .form-tambah label {
+        .form-tambah label,
+		.form-signup label {
             margin-bottom: 5px;
         }
         .form-title {
@@ -127,6 +138,7 @@ textarea:focus {
             padding: 5px;
         }
         .form-login button,
+		.form-signup button,
         .form-tambah button {
             border: none;
             padding-top: 5px;
@@ -135,17 +147,20 @@ textarea:focus {
             color: #F5F5F5;
             font-weight: bold;
         }
-        .form-tambah button {
+        .form-tambah button,
+		.form-signup button {
             margin-bottom: 20px;
         }
-        .form-login span {
+        .form-login span,
+		.form-signup span {
             font-size: 0.8em;
             text-align: center;
             display: block;
             padding: 0;
             clear: both;
         }
-        .form-login span a {
+        .form-login span a,
+		.form-signup span a {
             text-decoration: underline;
             color: #25729d;
             font-weight: bold;
